--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  
-  
+    <!-- <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7-ctbeGOOihHWPavd2ACXGF6eTnBcO7Y&callback=initMap"></script>
+   -->
 
 
     <!--
